# Joint3DGS

./: .gitignore  static_dynamic_regions_estimation.tex
ArtRig/: .gitignore  .gitmodules  README.md  codex_articulation_context.md  codex_context_articulation_multiview_matching.md  plot_dino_feature_map.py  preprocess_video_da3_folder.py  pyproject.toml  requirements.txt  run_matching.py  run_pipeline.py  run_pipeline_folder.py  run_pipeline_multiview.py  visualize_segmentation_3d.py
ArtRig/articulation/: __init__.py
ArtRig/configs/: default.yaml  depth_anything3.yaml  joint.yaml  matching.yaml  pipeline.yaml  segmentation.yaml  tracker.yaml
ArtRig/scripts/: build_multiview_report.py  install_submodules.sh  plot_dino_feature_map.py  preprocess_rgb_video.py  preprocess_sequence.py  preprocess_video_da3_folder.py  run_joint.py  run_matching.py  run_pipeline.py  run_pipeline_folder.py  run_pipeline_multiview.py  run_preparation_all_benchmark.py  run_segmentation.py  visualize_outputs.py  visualize_segmentation_3d.py
ArtRig/tests/: test_consensus.py  test_joint_models.py  test_matching_filters.py  test_multiview_consistency.py  test_multiview_fusion.py  test_pipeline_smoke.py  test_segmentation_losses.py  test_so3_se3.py  test_track_building.py
DA3_SAM3/: .gitignore  .gitmodules  METHOD_STATUS.md  README.md  README_preliminary_dynamic_recon.md  codex_context_da3_sam3_preliminary_pipeline.md  codex_context_dynamic_recon.md  environment.yml  pyproject.toml  requirements.txt
DA3_SAM3/configs/: base.yaml  convergence_7gb_safe.yaml  full_video.yaml
Sapien/: README.md
(+195 files in other folders)
