[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-recon"
version = "0.1.0"
description = "DA3 + SAM3 dynamic/static 3D video reconstruction pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "imageio",
  "imageio-ffmpeg",
  "matplotlib",
  "numpy",
  "opencv-python",
  "open3d",
  "pillow",
  "pyyaml",
  "scipy",
  "tqdm",
  "trimesh",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dynamic_recon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
